# HSOS_Computergrafik_Praktikum

CGPrakt1/: CMakeLists.txt  main.cpp
CGPrakt1/include/: color.h  rgbimage.h  vector.h
CGPrakt1/lib/: color.cpp  rgbimage.cpp  vector.cpp
CGPrakt1/test/: test1.cpp  test1.h  test3.cpp
CGPrakt2/: CMakeLists.txt  CMakeSettings.json  main.cpp
CGPrakt2/include/: CGUtilities.h  SimpleRayTracer.h
CGPrakt2/lib/: CGUtilities.cpp  SimpleRayTracer.cpp  color.cpp  rgbimage.cpp  vector.cpp
CGPrakt2/test/: test2.cpp  test2.h  test3.h
CGPrakt3/CGVStudio/CGVStudio/Release/: CGVStudio.exe.recipe  CGVStudio.iobj  CGVStudio.ipdb
CGPrakt3/CGVStudio/CGVStudio/Release/CGVStudio.tlog/: CGVStudio.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CGPrakt3/src/: Application.cpp  LineBoxModel.cpp  TriangleBoxModel.cpp  color.cpp  rgbimage.cpp  vector.cpp  vector.h
CGPrakt3_Clion/: CMakeLists.txt
CGPrakt3_Clion/include/: Aabb.h  Application.h  BaseShader.h  IndexBuffer.h  LineBoxModel.h  Model.h  PhongShader.h  Texture.h  TriangleBoxModel.h  VertexBuffer.h  vector.h
CGPrakt3_Clion/source/: Aabb.cpp  Application.cpp  BaseModel.cpp  BaseShader.cpp  Camera.cpp  ConstantShader.cpp  IndexBuffer.cpp  LinePlaneModel.cpp  Matrix.cpp  Model.cpp  PhongShader.cpp  Texture.cpp  TrianglePlaneModel.cpp  TriangleSphereModel.cpp  VertexBuffer.cpp  color.cpp  main.cpp  rgbimage.cpp  vector.cpp
CGPrakt4_Clion/: CMakeLists.txt
CGPrakt4_Clion/include/: Application.h  BaseModel.h  LinePlaneModel.h  Model.h  Scene.h  Tank.h
CGPrakt4_Clion/source/: Aabb.cpp  Application.cpp  BaseShader.cpp  Camera.cpp  ConstantShader.cpp  LineBoxModel.cpp  Model.cpp  PhongShader.cpp  Scene.cpp  Tank.cpp  Texture.cpp  TriangleBoxModel.cpp  TrianglePlaneModel.cpp  TriangleSphereModel.cpp  VertexBuffer.cpp  main.cpp
CGPrakt5_Clion/: CMakeLists.txt
CGPrakt5_Clion/assets/: fsterrain.glsl  vsterrain.glsl
CGPrakt5_Clion/include/: Application.h  BaseModel.h  BaseShader.h  Camera.h  ConstantShader.h  Model.h  PhongShader.h  Terrain.h  TerrainShader.h  Texture.h  TrianglePlaneModel.h  TriangleSphereModel.h  VertexBuffer.h  vector.h
CGPrakt5_Clion/libraries/assimp/include/assimp/: anim.h  camera.h  matrix3x3.h  matrix3x3.inl  matrix4x4.h  matrix4x4.inl  mesh.h  postprocess.h  types.h  vector3.h
CGPrakt5_Clion/source/: Aabb.cpp  Application.cpp  BaseModel.cpp  BaseShader.cpp  Camera.cpp  IndexBuffer.cpp  LineBoxModel.cpp  LinePlaneModel.cpp  Model.cpp  PhongShader.cpp  Terrain.cpp  TerrainShader.cpp  Texture.cpp  TriangleBoxModel.cpp  main.cpp  rgbimage.cpp  vector.cpp
CGPrakt6/CGVStudio/CGVStudio/: Cock.cpp
CGPrakt6/CGVStudio/CGVStudio/Debug/: CGVStudio.exe.recipe  CGVStudio.ilk  vc143.idb
CGPrakt6/CGVStudio/CGVStudio/Debug/CGVStudio.tlog/: CGVStudio.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CGPrakt6/CGVStudio/CGVStudio/Release/: CGVStudio.exe.recipe  CGVStudio.iobj  CGVStudio.ipdb
CGPrakt6/CGVStudio/CGVStudio/Release/CGVStudio.tlog/: CGVStudio.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CGPrakt6/assets/: fsphong.glsl  vsphong.glsl
CGPrakt6/src/: Application.cpp  Lights.h  LineBoxModel.cpp  Model.cpp  Model.h  ShaderLightMapper.cpp  ShadowMapGenerator.cpp  Texture.cpp  TriangleBoxModel.cpp  TriangleSphereModel.cpp  color.cpp  main.cpp  rgbimage.cpp  rgbimage.h  vector.cpp  vector.h
CGPrakt6_Clion/: CMakeLists.txt
CGPrakt6_Clion/assets/: fsphong.glsl  vsdepth.glsl  vsphong.glsl
CGPrakt6_Clion/include/: Application.h  Camera.h  Matrix.h  Texture.h  VertexBuffer.h
CGPrakt6_Clion/libraries/assimp/include/assimp/: IOSystem.hpp  config.h  material.h  postprocess.h
CGPrakt6_Clion/libraries/freeimage/include/: FreeImage.h
CGPrakt6_Clion/source/: Application.cpp  Camera.cpp  Framebuffer.cpp  Matrix.cpp  Texture.cpp  VertexBuffer.cpp  main.cpp
CGPrakt6_Clion/source/utils/Lights/: Lights.h  ShaderLightMapper.cpp  ShaderLightMapper.h  ShadowMapGenerator.cpp  ShadowMapGenerator.h
CGPrakt6_Clion/source/utils/Models/: Aabb.cpp  Aabb.h  BaseModel.cpp  BaseModel.h  LineBoxModel.cpp  LineBoxModel.h  LinePlaneModel.cpp  LinePlaneModel.h  Model.cpp  Model.h  TriangleBoxModel.cpp  TriangleBoxModel.h  TrianglePlaneModel.cpp  TrianglePlaneModel.h  TriangleSphereModel.cpp  TriangleSphereModel.h
CGPrakt6_Clion/source/utils/Shader/: BaseShader.cpp  BaseShader.h  ConstantShader.cpp  ConstantShader.h  PhongShader.cpp  PhongShader.h
CGPrakt6_Clion/source/utils/YourClasses/: color.cpp  color.h  rgbimage.cpp  rgbimage.h  vector.cpp  vector.h
